# api-pddikti

./: .env.example  .gitignore  HOSTED_API_TERMS.md  LICENSE  README.md  api_overview.json  pyproject.toml  requirements.txt  vercel.json
.github/: FUNDING.yml
.github/workflows/: ci.yml  django.yml
app/: __init__.py  main.py
app/api/: __init__.py  common.py  router.py
app/api/routes/: __init__.py  dosen.py  mahasiswa.py  overview.py  prodi.py  prodi_bidang_ilmu.py  pt.py  search.py  stats.py
app/core/: __init__.py  config.py  middleware.py  request_context.py
app/services/: api_client.py
app/web/: __init__.py  router.py
app/web/templates/: base.html  landing.html  web_api.html  web_detail.html  web_group.html  web_index.html
pddikti/: settings.py  urls.py  wsgi.py
pddikti_api/: apps.py  middleware.py  urls.py  views.py
tests/: conftest.py  test_app.py
