[project]
name = "api-pddikti"
version = "4.1.0"
description = "Production API service for structured access to Indonesia higher-education data (PDDikti), including universities, study programs, lecturers, and students."
license = { file = "LICENSE" }
authors = [
    { name = "RoneAI", email = "founder@rone.dev" },
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.116.1",
    "requests>=2.33.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

[tool.uv]
package = false
